--- a/src/main/resources/static/sa-html/menu/menuadd.html
+++ b/src/main/resources/static/sa-html/menu/menuadd.html
@@ -26,7 +26,7 @@
 					<el-input v-model="resource.url"></el-input>
 				</el-form-item>
 				<el-form-item>
-					<el-button @click="submitForm('resource')" type="primary">立即创建</el-button>
+					<el-button @click="submitForm('resource')" type="primary">提交</el-button>
 					<el-button @click="resetForm('resource')">重置</el-button>
 				</el-form-item>
 			</el-form>
@@ -97,8 +97,16 @@
                                         url: '/resource',
                                         type: 'PUT',
                                         data: JSON.stringify(this.$refs[formName].model),
-                                        complete: function (response) {
-                                            console.log(response);
+                                        success: function (data) {
+                                            if (data && data.state) {
+                                                layer.alert('更新成功', {icon: 1}, function (index) {
+                                                    layer.close(index);
+                                                    let curr_index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
+                                                    parent.layer.close(curr_index); //再执行关闭
+                                                    console.log(parent);
+                                                    parent.refreshTreeData();
+                                                });
+                                            }
                                         }
                                     });
                                 }
