修改日志类，资源节点url可以为空，自定义banner

--- a/src/main/resources/static/sa-html/menu/menuadd.html
+++ b/src/main/resources/static/sa-html/menu/menuadd.html
@@ -62,7 +62,7 @@
                             {min: 0, max: 10, message: '长度不超过 10 个字符', trigger: 'blur'}
                         ],
                         url: [
-                            {required: true, message: '请输入菜单项URL(填写相对路径)', trigger: 'blur'}
+                            {required: false, message: '请输入菜单项URL(填写相对路径,如果留空则是普通菜单节点)', trigger: 'blur'}
                         ],
                         pid: [
                             {required: true, message: '出现错误请重试', trigger: 'submit'}
