--- a/src/main/resources/static/sa-html/role/menu-setup.html
+++ b/src/main/resources/static/sa-html/role/menu-setup.html
@@ -79,7 +79,6 @@
 
 </div>
 
-<script src="../../sa-resources/menu-list.js"></script>
 <script src="../../sa-resources/admin-util.js"></script>
 
 <script>
@@ -95,19 +94,23 @@
         methods: {
             // 保存
             ok: function () {
-                var str = '';
+                var str = [];
                 this.$refs.tree.getCheckedKeys().forEach(function (ts) {
-                    str += '&ids=' + ts;
+                    str.push(ts)
                 });
-
-                var url = '/MRM/updateRoleMenu?role_id=' + role_id + str;
-                sa.ajax2(url, {}, function (res) {
+                let data = {
+                    roleid: role_id,
+                    resids: str
+                };
+                sa.ajax2("/role/updateresource", JSON.stringify(data), function (res) {
                     layer.alert('成功', {}, function () {
                         if (parent != window) {
                             parent.layer.closeAll('iframe');
                         }
                         layer.closeAll();
                     });
+                }, {
+                    type: "put"
                 })
             },
             // 点击回调, 处理其子节点跟随父节点的选中
@@ -127,16 +130,48 @@
         created: function () {
 
             // 全部
-            sa.ajax2('/SysMenu/getList', this.p, function (res) {
-                menuList = arrayToTree(menuList);	// 一维转tree
-                menuList = refMenuList(menuList);	// 属性处理
-                this.dataList = menuList;	// 数据
-                this.select_list = ['11', '1', '1-1', '1-2', '1-3', '1-3-1', '2', '2-1', '3', '3-1', '3-2'];	// 选中的列表
-            }.bind(this));
+            sa.ajax2('/resource', null, function (arg) {
+                if (!arg || !arg.state) {
+                    return;
+                } else {
+                    arg = arg.data;
+                }
+                parseDataTooTree(arg);
+                this.dataList = arg;	// 数据
+            }.bind(this), {
+                type: "get"
+            });
+
+            //当前有权限的节点
+            sa.ajax2('/resource/byrole/' + role_id, null, function (res) {
+                if (res && res.state) {
+                    let data = res.data;
+                    for (let i = 0; i < data.length; i++) {
+                        this.select_list.push(data[i].id);
+                    }
+                    console.log(this.select_list);
+                }
+            }.bind(this), {
+                type: "get"
+            });
 
 
         }
-    })
+    });
+    let parseDataTooTree = function (arg) {
+        for (let i = 0; i < arg.length; i++) {
+            arg[i].icon = 'el-icon-document-remove';
+            arg[i].label = arg[i].name;
+            if (arg[i].childList && arg[i].childList == 0) {
+                delete arg[i].childList;
+                continue;
+            }
+            if (arg[i].childList) {
+                parseDataTooTree(arg[i].childList);
+                arg[i].children = arg[i].childList;
+            }
+        }
+    };
 
 
 </script>
