权限管理初步写完

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -62,13 +62,13 @@
 
     // 你所有要改的代码全在这里   ↓↓↓↓↓
 
-    var page_title = 'ddvudo-登录';		// 页面标题
-    var two_title = '操作帮助';			// 第二个卡片的标题(最好四个字)
-    var username = 'admin';	// 默认的key
-    var password = 'admin';	// 默认的password
+    let page_title = '';		// 页面标题
+    let two_title = '操作帮助';			// 第二个卡片的标题(最好四个字)
+    var username = '';	// 默认的key
+    var password = '';	// 默认的password
     // 第二个模板的内容
-    var tow_content = '输入账号和密码，点击按钮登录即可';
-    // var tow_content = '本页面参考于此模板：<br/> <a href="http://www.jq22.com/demo/jQuery-dl20160111/" target="_blank">http://www.jq22.com/yanshi5518</a>';
+    let tow_content = '输入账号和密码，点击按钮登录即可';
+    // let tow_content = '本页面参考于此模板：<br/> <a href="http://www.jq22.com/demo/jQuery-dl20160111/" target="_blank">http://www.jq22.com/yanshi5518</a>';
 
     // 你所有要改的代码全在这里   ↑↑↑↑↑
     // $('.login-btn').click(function () {
