--- a/src/main/resources/static/sa-html/role/role-list.html
+++ b/src/main/resources/static/sa-html/role/role-list.html
@@ -195,7 +195,7 @@
                 layer.open({
                     type: 2,
                     title: '为 [' + data.name + '] 分配权限',
-                    shadeClose: true,
+                    shadeClose: false,
                     shade: 0.8,
                     area: ['70%', '100%'],
                     content: 'menu-setup.html?role_id=' + data.id
