--- a/src/main/resources/static/sa-html/user/user-add.html
+++ b/src/main/resources/static/sa-html/user/user-add.html
@@ -34,7 +34,7 @@
 		<el-form ref="form">
 
 			<div class="c-item">
-				<label class="c-label">昵称：</label>
+				<label class="c-label">用户名：</label>
 				<el-input size="mini" v-model="m.username"></el-input>
 			</div>
 
@@ -42,31 +42,6 @@
 			<div class="c-item">
 				<label class="c-label">密码：</label>
 				<el-input size="mini" v-model="m.password"></el-input>
-			</div>
-
-			<br>
-			<div class="c-item">
-				<label class="c-label">手机：</label>
-				<el-input size="mini" v-model="m.phone"></el-input>
-			</div>
-
-			<br>
-			<div class="c-item">
-				<label class="c-label">角色：</label>
-				<el-select size="mini" v-model="m.role_id">
-					<el-option :value="1" label="管理员"></el-option>
-					<el-option :value="2" label="公告管理员"></el-option>
-					<el-option :value="3" label="普通用户"></el-option>
-				</el-select>
-			</div>
-
-			<br>
-			<div class="c-item">
-				<label class="c-label">性别：</label>
-				<el-radio-group size="mini" v-model="m.sex">
-					<el-radio :label="1">男</el-radio>
-					<el-radio :label="2">女</el-radio>
-				</el-radio-group>
 			</div>
 
 			<br>
@@ -94,8 +69,6 @@
             m: {	// 查询参数
                 username: '',
                 password: '',
-                phone: '',
-                sex: 1,
             }
         },
         methods: {
