redis存储session，使用pagehelper分页,更换前端资源的cdn

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,6 +11,7 @@
 	<link href="sa-resources/index.css" rel="stylesheet">
 	<link href="sa-resources/theme.css" rel="stylesheet">
 
+
 </head>
 <body>
 <!-- style="display: none;" 防止 初始花屏 -->
@@ -227,14 +228,13 @@
 
 
 </div>
-
 <script src="https://unpkg.com/vue@2.6.10/dist/vue.js"></script>
 <script type="text/javascript">
     Vue.config.productionTip = false;
 </script>
 <script src="https://unpkg.com/element-ui@2.8.2/lib/index.js"></script>
 <script src="https://unpkg.com/swiper@4.5.0/dist/js/swiper.min.js"></script>
-<script src="https://unpkg.com/jquery@3.4.1/dist/jquery.js"></script>
+<script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/layer/3.0.1/layer.min.js"></script>
 
 <script src="sa-resources/admin-util.js"></script>
