--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -56,7 +56,7 @@
 	</div>
 
 </div>
-<script src="https://unpkg.com/jquery@3.4.1/dist/jquery.js"></script>
+<script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/layer/3.0.1/layer.min.js"></script>
 <script type="text/javascript">
 
