--- a/src/main/resources/static/sa-html/article/art-add.html
+++ b/src/main/resources/static/sa-html/article/art-add.html
@@ -13,7 +13,7 @@
 	<script src="https://unpkg.com/element-ui@2.8.2/lib/index.js"></script>
 	<script src="https://unpkg.com/wangeditor@3.1.1/release/wangEditor.min.js"></script>
 
-	<script src="https://unpkg.com/jquery@3.4.1/dist/jquery.js"></script>
+	<script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://cdn.bootcss.com/layer/3.0.1/layer.min.js"></script>
 	<script src="../../static/sa.js"></script>
 	<script src="data-list.js"></script>
