--- a/src/main/resources/static/sa-html/role/role-list.html
+++ b/src/main/resources/static/sa-html/role/role-list.html
@@ -13,7 +13,7 @@
 	<script src="https://unpkg.com/vue@2.6.10/dist/vue.js"></script>
 	<script src="https://unpkg.com/element-ui@2.8.2/lib/index.js"></script>
 
-	<script src="https://unpkg.com/jquery@3.4.1/dist/jquery.js"></script>
+	<script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://cdn.bootcss.com/layer/3.0.1/layer.min.js"></script>
 	<script src="../../static/sa.js"></script>
 
@@ -56,7 +56,7 @@
 
 			<el-table-column label="责任描述">
 				<template slot-scope="scope">
-					<el-input :readonly="!scope.row.lock?false:'readonly'" size="mini"
+					<el-input :readonly="!scope.row.lock?false:'readonly'" size="mini" type="textarea"
 					          v-model="scope.row.desc"></el-input>
 				</template>
 			</el-table-column>
